<resources>
    <string name="app_name">Chotuve</string>
    <string name="bienvenido_a_chotuve">Bienvenido a Chotuve</string>
    <string name="registrate_titulo">Registrate a la app de videos más popular de la Fiuba</string>
    <string name="ingresar_titulo">Ingresar</string>
    <string name="ya_estas_registrado">¿Ya estas registrado en Chotuve?</string>
    <string name="no_tenes_cuenta">¿No tenes cuenta en Chotuve?</string>
    <string name="proximamente">Proximamente</string>
    <string name="autor_y_creacion">%1$s %2$s</string>
    <string name="reintentar">Reintentar</string>

    <string name="principal_menu">Principal</string>
    <string name="mis_videos_menu">Mis videos</string>
    <string name="notificaciones_menu">Notificaciones</string>
    <string name="chats_menu">Chats</string>
    <string name="perfil_menu">Perfil</string>

    <string name="perfil_videos_menu">Videos</string>
    <string name="perfil_informacion_menu">Información</string>
    <string name="nombre_y_apellido">%1$s %2$s</string>

    <string name="email_hint">email</string>
    <string name="contraseña_hint">contraseña</string>
    <string name="repetir_contraseña_hint">repetir contraseña</string>
    <string name="video_subir_titulo_hint">titulo</string>
    <string name="video_subir_ubicacion_hint">ubicación</string>
    <string name="video_subir_descripcion_hint">descripción (opcional)</string>
    <string name="video_subir_visibilidad_hint">visibilidad</string>
    <string name="video_subir_visibilidad_helper_text">publico: todos en Chotuve podrán verlo.\nprivado: solo tus contactos podrán verlo.</string>

    <string name="video_label">Video</string>

    <string name="registrarme_btn"><u>Registrarme</u></string>
    <string name="ingresar_btn"><u>Ingresar</u></string>
    <string name="crear_btn">Crear</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>
